--- a/functions/package.json
+++ b/functions/package.json
@@ -1,5 +1,6 @@
 {
   "name": "functions",
+  "private": true,
   "scripts": {
     "build": "tsc",
     "build:watch": "tsc --watch",
@@ -14,11 +15,20 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "express": "^4.18.1",
     "firebase-admin": "^10.2.0",
-    "firebase-functions": "^3.21.0"
+    "firebase-functions": "^3.21.0",
+    "node": "^18.8.0"
   },
   "devDependencies": {
-    "typescript": "^4.6.4"
-  },
-  "private": true
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.7.16",
+    "concurrently": "^7.4.0",
+    "firebase-functions-test": "^2.4.0",
+    "ts-loader": "^9.3.1",
+    "typescript": "^4.6.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
+  }
 }
