--- a/go_brasil_ranking/package.json
+++ b/go_brasil_ranking/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test": ""
+    "tsc": "npx tsc -w",
+    "test": "npx jest --watch ./dist/"
   },
   "author": "",
   "license": "ISC",
