--- a/go_brasil_ranking/package.json
+++ b/go_brasil_ranking/package.json
@@ -1,15 +1,16 @@
 {
   "name": "go_brasil_ranking",
   "version": "1.0.0",
+  "author": "Philippe Fanaro",
+  "license": "ISC",
   "description": "Ranking Go Brasil",
-  "main": "index.js",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "tsc": "npx tsc -w",
+    "webpack": "npx webpack",
     "test": "npx jest --watch ./dist/"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.3.3",
     "@types/jest": "^29.0.0",
@@ -17,6 +18,7 @@
     "concurrently": "^7.4.0",
     "jest": "^29.0.2",
     "live-server": "^1.2.2",
+    "ts-loader": "^9.3.1",
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
