--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,7 @@
   "engines": {
     "node": "16"
   },
-  "main": "lib/index.js",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.18.1",
     "firebase-admin": "^10.2.0",
