--- a/go_brasil_ranking/package.json
+++ b/go_brasil_ranking/package.json
@@ -22,5 +22,8 @@
     "typescript": "^4.8.3",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "firebase": "^9.9.4"
   }
 }
