--- a/functions/package.json
+++ b/functions/package.json
@@ -20,12 +20,14 @@
   },
   "main": "index.js",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.0",
     "node": "^18.8.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.16",
     "concurrently": "^7.4.0",
