--- a/go_brasil_ranking/package.json
+++ b/go_brasil_ranking/package.json
@@ -27,7 +27,6 @@
     "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "firebase": "^9.9.4",
-    "wgo": "^3.0.0-alpha.10"
+    "firebase": "^9.9.4"
   }
 }
