--- a/.gitignore
+++ b/.gitignore
@@ -12,15 +12,15 @@ functions/typings/
 **/public/index.js
 
 # Go Brasil Ranking
-go_brasil_ranking/index.js
-go_brasil_ranking/dist/
+frontend/index.js
+frontend/dist/
 
-go_brasil_ranking/node_modules/
-go_brasil_ranking/dist
-go_brasil_ranking/index.js
+frontend/node_modules/
+frontend/dist
+frontend/index.js
 
-go_brasil_ranking/lib/**/*.js
-go_brasil_ranking/lib/**/*.js.map
+frontend/lib/**/*.js
+frontend/lib/**/*.js.map
 
 functions/typings/
 
