reorganizing the scripts and firebase files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,21 +14,21 @@
         //   2. Firebase
         //
         // 2.1. Config
-        "firebase/": false,
-        "firebase.json": true,
-        ".firebaserc": true,
-        "firestore.indexes.json": true,
-        "firestore.rules": true,
-        "remoteconfig.template.json": true,
-        "functions/tsconfig.tsbuildinfo": true,
+        "**/firebase*": false,
+        "**/firebase/": false,
+        "**/firebase.json": false,
+        "**/.firebaserc": false,
+        "**/firestore.indexes.json": false,
+        "**/firestore.rules": false,
+        "**/remoteconfig.template.json": false,
         //
         // 2.2. Debug
-        "firebase-debug.log": true,
-        "firestore-debug.log": true,
-        "pubsub-debug.log": true,
-        "ui-debug.log": true,
+        "**/firebase-debug.log": true,
+        "**/firestore-debug.log": true,
+        "**/pubsub-debug.log": true,
+        "**/ui-debug.log": true,
         //
         //   3. Others
-        "index.js.LICENSE.txt": true,
+        "**/index.js.LICENSE.txt": true,
     }
 }
