--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,6 +14,7 @@
         //   2. Firebase
         //
         // 2.1. Config
+        ".firebase/": true,
         "**/firebase*": false,
         "**/firebase/": false,
         "**/firebase.json": false,
