--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,8 @@
     "everything": "sh ./scripts/everything.sh",
     "test": "sh ./scripts/test.sh",
     "tsc": "sh ./scripts/tsc.sh",
-    "webpack": "sh ./scripts/webpack.sh"
+    "webpack": "sh ./scripts/webpack.sh",
+    "shell": "firebase functions:shell"
   },
   "engines": {
     "node": "16"
