closer to production

--- a/firebase.json
+++ b/firebase.json
@@ -22,7 +22,8 @@
     "rewrites": [
       {
         "source": "**",
-        "function": "goBrasilRanking"
+        "destination": "/index.html",
+        "region": "southamerica-east1"
       }
     ]
   },
