--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,7 @@
         //
         //   1. JS | TS | Packages
         "**/dist/": true,
-        "**/index.js": true,
+        "**/index.js": false,
         "**/node_modules/": true,
         "**/package-lock.json": true,
         "**/tsconfig.tsbuildinfo": true,
