--- a/functions/package.json
+++ b/functions/package.json
@@ -4,11 +4,12 @@
   "author": "Philippe Fanaro",
   "private": true,
   "scripts": {
-    "everything": "sh ./scripts/everything.sh",
+    "dev": "sh ./scripts/dev.sh",
     "test": "sh ./scripts/test.sh",
     "tsc": "sh ./scripts/tsc.sh",
     "webpack": "sh ./scripts/webpack.sh",
-    "shell": "firebase functions:shell"
+    "shell": "firebase functions:shell",
+    "prod": "sh ./scripts/prod.sh"
   },
   "engines": {
     "node": "16"
@@ -31,6 +32,7 @@
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
+    "webpack-merge": "^5.8.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
