--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/jest": "^29.1.0",
     "chai": "^4.3.6",
     "concurrently": "^7.4.0",
+    "core-js": "^3.25.5",
     "jest": "^29.1.1",
     "live-server": "^1.2.2",
     "ts-loader": "^9.4.1",
