--- a/functions/package.json
+++ b/functions/package.json
@@ -23,11 +23,21 @@
     "node": "^16.17.1"
   },
   "devDependencies": {
+    "@babel/cli": "^7.19.3",
+    "@babel/core": "^7.19.3",
+    "@babel/preset-env": "^7.19.4",
+    "@babel/preset-flow": "^7.18.6",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/chai": "^4.3.3",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.1.2",
     "@types/node": "^18.7.23",
+    "chai": "^4.3.6",
     "concurrently": "^7.4.0",
+    "core-js": "^3.25.5",
     "firebase-functions-test": "^2.4.0",
+    "jest": "^29.1.2",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.4",
     "webpack": "^5.74.0",
