--- a/functions/package.json
+++ b/functions/package.json
@@ -19,7 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "firebase-admin": "^11.0.1",
-    "firebase-functions": "^3.24.1",
+    "firebase-functions": "^4.0.0-rc.0",
     "node": "^16.17.1"
   },
   "devDependencies": {
